samples/bookinfo/platform/consul/virtual-service-all-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage
spec:
  hosts:
  - productpage.service.consul
  http:
  - route:
    - destination:
        host: productpage.service.consul
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews.service.consul
  http:
  - route:
    - destination:
        host: reviews.service.consul
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings.service.consul
  http:
  - route:
    - destination:
        host: ratings.service.consul
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
spec:
  hosts:
  - details.service.consul
  http:
  - route:
    - destination:
        host: details.service.consul
        subset: v1
